# paperchaser

./: .gitignore  README.md  authors-affiliations.py  bar.txt.ORIG  foo  myconflicts.txt  paperchaser  setup.cfg  test_paperchaser.py
.github/workflows/: python-package.yml
