[metadata]
# replace with your username:
name = paperchaser-idoerg
version = 0.1
author = Iddo Friedberg
author_email = idoerg@gmail.com
description = A tool for collecting publications of several authors from Pubmed
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/idoerg/paperchaser
project_urls =
    Bug Tracker = https://github.com/idoerg/paperchaser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
